Analyses/dtd.output
Grammar

    0 $accept: main $end

    1 main: dtd

    2 dtd: dtd ATTLIST NAME att_definition CLOSE
    3    | dtd element
    4    | /* empty */

    5 element: ELEMENT NAME contenu CLOSE

    6 contenu: EMPTY
    7        | ANY
    8        | mixed
    9        | children

   10 mixed: OPENPAR PCDATA contenu_mixed CLOSEPAR

   11 contenu_mixed: contenu_mixed PIPE NAME
   12              | /* empty */

   13 children: sequence_ou_choix cardinalite

   14 cardinalite: QMARK
   15            | AST
   16            | PLUS
   17            | /* empty */

   18 sequence_ou_choix: sequence
   19                  | choix

   20 sequence: OPENPAR liste_sequence CLOSEPAR

   21 liste_sequence: item
   22               | liste_sequence COMMA item

   23 item: NAME cardinalite
   24     | children

   25 choix: OPENPAR liste_choix_plus CLOSEPAR

   26 liste_choix_plus: liste_choix PIPE item

   27 liste_choix: liste_choix PIPE item
   28            | item

   29 att_definition: att_definition attribut
   30               | /* empty */

   31 attribut: NAME att_type defaut_declaration

   32 att_type: CDATA
   33         | TOKENTYPE
   34         | type_enumere

   35 type_enumere: OPENPAR liste_enum_plus CLOSEPAR

   36 liste_enum_plus: liste_enum PIPE item_enum

   37 liste_enum: item_enum
   38           | liste_enum PIPE item_enum

   39 item_enum: NAME

   40 defaut_declaration: DECLARATION
   41                   | STRING
   42                   | FIXED STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ELEMENT (258) 5
ATTLIST (259) 2
CLOSE (260) 2 5
OPENPAR (261) 10 20 25 35
CLOSEPAR (262) 10 20 25 35
COMMA (263) 22
PIPE (264) 11 26 27 36 38
FIXED (265) 42
EMPTY (266) 6
ANY (267) 7
PCDATA (268) 10
AST (269) 15
QMARK (270) 14
PLUS (271) 16
CDATA (272) 32
NAME (273) 2 5 11 23 31 39
TOKENTYPE (274) 33
DECLARATION (275) 40
STRING (276) 41 42


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
main (23)
    on left: 1, on right: 0
dtd (24)
    on left: 2 3 4, on right: 1 2 3
element (25)
    on left: 5, on right: 3
contenu (26)
    on left: 6 7 8 9, on right: 5
mixed (27)
    on left: 10, on right: 8
contenu_mixed (28)
    on left: 11 12, on right: 10 11
children (29)
    on left: 13, on right: 9 24
cardinalite (30)
    on left: 14 15 16 17, on right: 13 23
sequence_ou_choix (31)
    on left: 18 19, on right: 13
sequence (32)
    on left: 20, on right: 18
liste_sequence (33)
    on left: 21 22, on right: 20 22
item (34)
    on left: 23 24, on right: 21 22 26 27 28
choix (35)
    on left: 25, on right: 19
liste_choix_plus (36)
    on left: 26, on right: 25
liste_choix (37)
    on left: 27 28, on right: 26 27
att_definition (38)
    on left: 29 30, on right: 2 29
attribut (39)
    on left: 31, on right: 29
att_type (40)
    on left: 32 33 34, on right: 31
type_enumere (41)
    on left: 35, on right: 34
liste_enum_plus (42)
    on left: 36, on right: 35
liste_enum (43)
    on left: 37 38, on right: 36 38
item_enum (44)
    on left: 39, on right: 36 37 38
defaut_declaration (45)
    on left: 40 41 42, on right: 31


state 0

    0 $accept: . main $end

    $default  reduce using rule 4 (dtd)

    main  go to state 1
    dtd   go to state 2


state 1

    0 $accept: main . $end

    $end  shift, and go to state 3


state 2

    1 main: dtd .
    2 dtd: dtd . ATTLIST NAME att_definition CLOSE
    3    | dtd . element

    ELEMENT  shift, and go to state 4
    ATTLIST  shift, and go to state 5

    $default  reduce using rule 1 (main)

    element  go to state 6


state 3

    0 $accept: main $end .

    $default  accept


state 4

    5 element: ELEMENT . NAME contenu CLOSE

    NAME  shift, and go to state 7


state 5

    2 dtd: dtd ATTLIST . NAME att_definition CLOSE

    NAME  shift, and go to state 8


state 6

    3 dtd: dtd element .

    $default  reduce using rule 3 (dtd)


state 7

    5 element: ELEMENT NAME . contenu CLOSE

    OPENPAR  shift, and go to state 9
    EMPTY    shift, and go to state 10
    ANY      shift, and go to state 11

    contenu            go to state 12
    mixed              go to state 13
    children           go to state 14
    sequence_ou_choix  go to state 15
    sequence           go to state 16
    choix              go to state 17


state 8

    2 dtd: dtd ATTLIST NAME . att_definition CLOSE

    $default  reduce using rule 30 (att_definition)

    att_definition  go to state 18


state 9

   10 mixed: OPENPAR . PCDATA contenu_mixed CLOSEPAR
   20 sequence: OPENPAR . liste_sequence CLOSEPAR
   25 choix: OPENPAR . liste_choix_plus CLOSEPAR

    OPENPAR  shift, and go to state 19
    PCDATA   shift, and go to state 20
    NAME     shift, and go to state 21

    children           go to state 22
    sequence_ou_choix  go to state 15
    sequence           go to state 16
    liste_sequence     go to state 23
    item               go to state 24
    choix              go to state 17
    liste_choix_plus   go to state 25
    liste_choix        go to state 26


state 10

    6 contenu: EMPTY .

    $default  reduce using rule 6 (contenu)


state 11

    7 contenu: ANY .

    $default  reduce using rule 7 (contenu)


state 12

    5 element: ELEMENT NAME contenu . CLOSE

    CLOSE  shift, and go to state 27


state 13

    8 contenu: mixed .

    $default  reduce using rule 8 (contenu)


state 14

    9 contenu: children .

    $default  reduce using rule 9 (contenu)


state 15

   13 children: sequence_ou_choix . cardinalite

    AST    shift, and go to state 28
    QMARK  shift, and go to state 29
    PLUS   shift, and go to state 30

    $default  reduce using rule 17 (cardinalite)

    cardinalite  go to state 31


state 16

   18 sequence_ou_choix: sequence .

    $default  reduce using rule 18 (sequence_ou_choix)


state 17

   19 sequence_ou_choix: choix .

    $default  reduce using rule 19 (sequence_ou_choix)


state 18

    2 dtd: dtd ATTLIST NAME att_definition . CLOSE
   29 att_definition: att_definition . attribut

    CLOSE  shift, and go to state 32
    NAME   shift, and go to state 33

    attribut  go to state 34


state 19

   20 sequence: OPENPAR . liste_sequence CLOSEPAR
   25 choix: OPENPAR . liste_choix_plus CLOSEPAR

    OPENPAR  shift, and go to state 19
    NAME     shift, and go to state 21

    children           go to state 22
    sequence_ou_choix  go to state 15
    sequence           go to state 16
    liste_sequence     go to state 23
    item               go to state 24
    choix              go to state 17
    liste_choix_plus   go to state 25
    liste_choix        go to state 26


state 20

   10 mixed: OPENPAR PCDATA . contenu_mixed CLOSEPAR

    $default  reduce using rule 12 (contenu_mixed)

    contenu_mixed  go to state 35


state 21

   23 item: NAME . cardinalite

    AST    shift, and go to state 28
    QMARK  shift, and go to state 29
    PLUS   shift, and go to state 30

    $default  reduce using rule 17 (cardinalite)

    cardinalite  go to state 36


state 22

   24 item: children .

    $default  reduce using rule 24 (item)


state 23

   20 sequence: OPENPAR liste_sequence . CLOSEPAR
   22 liste_sequence: liste_sequence . COMMA item

    CLOSEPAR  shift, and go to state 37
    COMMA     shift, and go to state 38


state 24

   21 liste_sequence: item .
   28 liste_choix: item .

    PIPE      reduce using rule 28 (liste_choix)
    $default  reduce using rule 21 (liste_sequence)


state 25

   25 choix: OPENPAR liste_choix_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 39


state 26

   26 liste_choix_plus: liste_choix . PIPE item
   27 liste_choix: liste_choix . PIPE item

    PIPE  shift, and go to state 40


state 27

    5 element: ELEMENT NAME contenu CLOSE .

    $default  reduce using rule 5 (element)


state 28

   15 cardinalite: AST .

    $default  reduce using rule 15 (cardinalite)


state 29

   14 cardinalite: QMARK .

    $default  reduce using rule 14 (cardinalite)


state 30

   16 cardinalite: PLUS .

    $default  reduce using rule 16 (cardinalite)


state 31

   13 children: sequence_ou_choix cardinalite .

    $default  reduce using rule 13 (children)


state 32

    2 dtd: dtd ATTLIST NAME att_definition CLOSE .

    $default  reduce using rule 2 (dtd)


state 33

   31 attribut: NAME . att_type defaut_declaration

    OPENPAR    shift, and go to state 41
    CDATA      shift, and go to state 42
    TOKENTYPE  shift, and go to state 43

    att_type      go to state 44
    type_enumere  go to state 45


state 34

   29 att_definition: att_definition attribut .

    $default  reduce using rule 29 (att_definition)


state 35

   10 mixed: OPENPAR PCDATA contenu_mixed . CLOSEPAR
   11 contenu_mixed: contenu_mixed . PIPE NAME

    CLOSEPAR  shift, and go to state 46
    PIPE      shift, and go to state 47


state 36

   23 item: NAME cardinalite .

    $default  reduce using rule 23 (item)


state 37

   20 sequence: OPENPAR liste_sequence CLOSEPAR .

    $default  reduce using rule 20 (sequence)


state 38

   22 liste_sequence: liste_sequence COMMA . item

    OPENPAR  shift, and go to state 19
    NAME     shift, and go to state 21

    children           go to state 22
    sequence_ou_choix  go to state 15
    sequence           go to state 16
    item               go to state 48
    choix              go to state 17


state 39

   25 choix: OPENPAR liste_choix_plus CLOSEPAR .

    $default  reduce using rule 25 (choix)


state 40

   26 liste_choix_plus: liste_choix PIPE . item
   27 liste_choix: liste_choix PIPE . item

    OPENPAR  shift, and go to state 19
    NAME     shift, and go to state 21

    children           go to state 22
    sequence_ou_choix  go to state 15
    sequence           go to state 16
    item               go to state 49
    choix              go to state 17


state 41

   35 type_enumere: OPENPAR . liste_enum_plus CLOSEPAR

    NAME  shift, and go to state 50

    liste_enum_plus  go to state 51
    liste_enum       go to state 52
    item_enum        go to state 53


state 42

   32 att_type: CDATA .

    $default  reduce using rule 32 (att_type)


state 43

   33 att_type: TOKENTYPE .

    $default  reduce using rule 33 (att_type)


state 44

   31 attribut: NAME att_type . defaut_declaration

    FIXED        shift, and go to state 54
    DECLARATION  shift, and go to state 55
    STRING       shift, and go to state 56

    defaut_declaration  go to state 57


state 45

   34 att_type: type_enumere .

    $default  reduce using rule 34 (att_type)


state 46

   10 mixed: OPENPAR PCDATA contenu_mixed CLOSEPAR .

    $default  reduce using rule 10 (mixed)


state 47

   11 contenu_mixed: contenu_mixed PIPE . NAME

    NAME  shift, and go to state 58


state 48

   22 liste_sequence: liste_sequence COMMA item .

    $default  reduce using rule 22 (liste_sequence)


state 49

   26 liste_choix_plus: liste_choix PIPE item .
   27 liste_choix: liste_choix PIPE item .

    PIPE      reduce using rule 27 (liste_choix)
    $default  reduce using rule 26 (liste_choix_plus)


state 50

   39 item_enum: NAME .

    $default  reduce using rule 39 (item_enum)


state 51

   35 type_enumere: OPENPAR liste_enum_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 59


state 52

   36 liste_enum_plus: liste_enum . PIPE item_enum
   38 liste_enum: liste_enum . PIPE item_enum

    PIPE  shift, and go to state 60


state 53

   37 liste_enum: item_enum .

    $default  reduce using rule 37 (liste_enum)


state 54

   42 defaut_declaration: FIXED . STRING

    STRING  shift, and go to state 61


state 55

   40 defaut_declaration: DECLARATION .

    $default  reduce using rule 40 (defaut_declaration)


state 56

   41 defaut_declaration: STRING .

    $default  reduce using rule 41 (defaut_declaration)


state 57

   31 attribut: NAME att_type defaut_declaration .

    $default  reduce using rule 31 (attribut)


state 58

   11 contenu_mixed: contenu_mixed PIPE NAME .

    $default  reduce using rule 11 (contenu_mixed)


state 59

   35 type_enumere: OPENPAR liste_enum_plus CLOSEPAR .

    $default  reduce using rule 35 (type_enumere)


state 60

   36 liste_enum_plus: liste_enum PIPE . item_enum
   38 liste_enum: liste_enum PIPE . item_enum

    NAME  shift, and go to state 50

    item_enum  go to state 62


state 61

   42 defaut_declaration: FIXED STRING .

    $default  reduce using rule 42 (defaut_declaration)


state 62

   36 liste_enum_plus: liste_enum PIPE item_enum .
   38 liste_enum: liste_enum PIPE item_enum .

    PIPE      reduce using rule 38 (liste_enum)
    $default  reduce using rule 36 (liste_enum_plus)
